<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout" android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?android:listPreferredItemHeight"
                android:background="@color/lightgray"
                android:paddingStart="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_large"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/emailHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logged_in_as"
                    android:textAllCaps="true"
                    android:textColor="@color/secondaryText"
                    android:gravity="center_vertical"/>
                <TextView
                    android:id="@+id/parentEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryText"
                    android:gravity="center_vertical"
                    android:layout_below="@id/emailHeader"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/search_guides"
                android:layout_height="?android:listPreferredItemHeight"
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:background="@drawable/borderless_item_selector">

                <TextView
                    android:id="@+id/search_canvas_guides_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextStyle.Secondary.Dark"
                    android:text="@string/searchGuides"/>

                <TextView
                    android:id="@+id/find_answers_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextStyle.Tertiary"
                    android:textStyle="italic"
                    android:text="@string/searchGuidesDetails"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/report_problem"
                android:layout_height="?android:listPreferredItemHeight"
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:background="@drawable/borderless_item_selector">

                <TextView
                    android:id="@+id/report_problem_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextStyle.Secondary.Dark"
                    android:text="@string/reportProblem"/>

                <TextView
                    android:id="@+id/let_us_know_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextStyle.Tertiary"
                    android:textStyle="italic"
                    android:text="@string/reportProblemDetails"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/request_feature"
                android:layout_height="?android:listPreferredItemHeight"
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:background="@drawable/borderless_item_selector">

                <TextView
                    android:id="@+id/feature_request_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextStyle.Secondary.Dark"
                    android:text="@string/requestFeature"/>

                <TextView
                    android:id="@+id/idea_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextStyle.Tertiary"
                    android:textStyle="italic"
                    android:text="@string/requestFeatureDetails"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_love"
                android:layout_height="?android:listPreferredItemHeight"
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:background="@drawable/borderless_item_selector">

                <TextView
                    android:id="@+id/share_love_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextStyle.Secondary.Dark"
                    android:text="@string/shareYourLove"/>

                <TextView
                    android:id="@+id/favorite_part_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextStyle.Tertiary"
                    android:textStyle="italic"
                    android:text="@string/shareYourLoveDetails"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/open_source"
                android:layout_height="?android:listPreferredItemHeight"
                android:layout_width="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:background="@drawable/borderless_item_selector">

                <TextView
                    android:id="@+id/open_source_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextStyle.Secondary.Dark"
                    android:text="@string/open_source"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextStyle.Tertiary"
                    android:textStyle="italic"
                    android:text="@string/open_source_details"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>