<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/parent_bg_gradient">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="48dp"
        android:src="@drawable/vd_parent_logo"
        android:contentDescription="@string/canvas_logo"/>

    <EditText
        android:id="@+id/userName"
        style="@style/Base.Widget.AppCompat.EditText.LoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/parent_email"
        android:minHeight="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_below="@id/logo"
        android:padding="8dp"
        app:layout_widthPercent="90%"
        android:layout_centerHorizontal="true"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@+id/password"/>

    <EditText
        android:id="@+id/password"
        style="@style/Base.Widget.AppCompat.EditText.LoginEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/password"
        android:layout_below="@id/userName"
        android:layout_marginTop="16dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:padding="8dp"
        android:maxLines="1"
        app:layout_widthPercent="90%"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:imeOptions="actionGo"
        android:nextFocusDown="@+id/next"/>

    <Button
        android:id="@+id/next"
        style="@style/Base.TextAppearance.AppCompat.Button.LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_below="@id/password"
        app:layout_widthPercent="90%"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:nextFocusDown="@+id/createAccount"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/next"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:text="@string/or"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        style="@style/Base.TextAppearance.AppCompat.Button.LoginButton"
        android:layout_height="wrap_content"
        app:layout_widthPercent="90%"
        android:id="@+id/canvasLogin"
        android:layout_below="@id/or"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:nextFocusDown="@+id/createAccount">

        <TextView
            android:id="@+id/canvasLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canvas_login_text"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:textAllCaps="true"
            android:layout_marginStart="8dp"/>
        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/canvas_logo_white"
            android:layout_toStartOf="@id/canvasLoginText"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/createAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:text="@string/createAccount"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:nextFocusDown="@+id/forgotPassword"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:text="@string/forgotPassword"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</android.support.percent.PercentRelativeLayout>