<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parent_bg_gradient">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="48dp"
        android:src="@mipmap/logo"
        android:contentDescription="@string/canvas_logo"/>

    <EditText
        android:id="@+id/resetPasswordEditText"
        style="@style/Base.Widget.AppCompat.EditText.LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/logo"
        android:layout_marginTop="32dp"
        android:padding="8dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/resetPasswordConfirmEditText"
        style="@style/Base.Widget.AppCompat.EditText.LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPassword"
        android:layout_below="@id/resetPasswordEditText"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/resetPasswordButton"
        style="@style/Base.TextAppearance.AppCompat.Button.LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_below="@id/resetPasswordConfirmEditText"
        android:layout_marginTop="16dp"
        android:enabled="false"/>
</RelativeLayout>