<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/parent_bg_gradient">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="48dp"
        android:src="@drawable/vd_parent_logo"
        android:contentDescription="@string/canvas_logo"/>

    <EditText
        android:id="@+id/email"
        style="@style/Base.Widget.AppCompat.EditText.LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@id/logo"
        android:layout_marginTop="32dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionGo"
        android:padding="8dp"
        android:minHeight="48dp"
        android:layout_centerHorizontal="true"
        app:layout_widthPercent="90%"/>

    <Button
        android:id="@+id/requestPassword"
        style="@style/Base.TextAppearance.AppCompat.Button.LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requestPassword"
        android:layout_below="@id/email"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        app:layout_widthPercent="90%"/>

</android.support.percent.PercentRelativeLayout>
